support spark 4+ with new frameless versions and use java 17 for ci